# Oxocard-Connect-CP-Make-Src

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: blinky.py  button.py  dimmer.py  load_cell.py  oxon_square.py  oxosquare.py  random_squares.py  servo.py  thermo.py
