[project]
name = "oxocard-connect-cp-make-src"
version = "0.1.0"
description = ""
authors = [{ name = "Jacques Supcik", email = "jacques@supcik.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["black (>=25.1.0,<26.0.0)", "ruff (>=0.12.8,<0.13.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 72
target-version = ['py38']

[tool.ruff]
line-length = 72
target-version = "py38"

[tool.ruff.lint]
ignore = ["F821"]
